# diff-based-analyze

./: .clangd  .editorconfig  .gitignore  .gitmodules  .typos.toml  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  Manifest.toml  Project.toml  README.md  build.zig  diff-based-analyze.cabal  index.html  justfile  llmCall.ts  main.jl  main.ts  package-lock.json  package.json  pnpm-lock.yaml  tasksPool.ts  tsconfig.json
.cache/clangd/index/: compile2ir.cpp.CB74681BADA0A736.idx  compile2ir.h.E05D325AF7304F0A.idx
.github/actions/fetch-micro-bench/: action.yml
.github/actions/nix/: action.yml
.github/actions/ocaml/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: baseline.yml  build-llvm.yml  build.yml  clang-static-analyzer.yml  coccinelle.yml  coderrect.yml  coverity.yml  frama-c.yml  frame-c.yml  ikos.yml  infer-racerd.yml  main.yml  parasoft-test.yml  rust.yml  rwop.yml  setup-env.yml  vitest.yml
.zed/: settings.json
Analyze/: .gitignore  micros-analyze.ipynb  record.md
analysis/: App.hpp  CMakeLists.txt  CompileOptionsApp.hpp  CompileOptionsAppImpl.cpp  CompileOptionsAppTest.cpp  GitApp.hpp  GitAppImpl.cpp  GitAppTest.cpp  LibSymbolsApp.hpp  LibSymbolsAppImpl.cpp  LibSymbolsAppTest.cpp  VariableApp.hpp  VariableAppImpl.cpp  VariableAppTest.cpp  argparse.hpp  expected.hpp  main.cpp  rust.hpp  types.hpp  uuidv4.hpp  uuidv4Impl.cpp
analysis/quill/: Backend.h  BackendTscClock.h  CsvWriter.h  Frontend.h  LogMacros.h  Logger.h  StringRef.h  TriviallyCopyableCodec.h  UserClockSource.h  Utility.h
analysis/quill/backend/: BackendManager.h  BackendOptions.h  BackendUtilities.h  BackendWorker.h  BacktraceStorage.h  ManualBackendWorker.h  PatternFormatter.h  RdtscClock.h  SignalHandler.h  StringFromTime.h  TimestampFormatter.h  TransitEvent.h  TransitEventBuffer.h
analysis/quill/bundled/fmt/: args.h  base.h  chrono.h  color.h  compile.h  format-inl.h  format.h  os.h  ostream.h  printf.h  ranges.h  std.h  xchar.h
analysis/quill/core/: Attributes.h  BoundedSPSCQueue.h  Codec.h  Common.h  DynamicFormatArgStore.h  Filesystem.h  FrontendOptions.h  InlinedVector.h  LogLevel.h  LoggerBase.h  LoggerManager.h  MacroMetadata.h  MathUtilities.h  PatternFormatterOptions.h  QuillError.h  Rdtsc.h  SinkManager.h  Spinlock.h  ThreadContextManager.h  ThreadUtilities.h  TimeUtilities.h  UnboundedSPSCQueue.h  Utf8Conv.h
analysis/quill/filters/: Filter.h
analysis/quill/sinks/: ConsoleSink.h  FileSink.h  JsonConsoleSink.h  JsonFileSink.h  NullSink.h  RotatingFileSink.h  Sink.h  StreamSink.h
analysis/quill/std/: Array.h  Chrono.h  Deque.h  FilesystemPath.h  ForwardList.h  List.h  Map.h  Optional.h  Pair.h  Set.h  Tuple.h  UnorderedMap.h  UnorderedSet.h  Vector.h  WideString.h
analyze/: micros-3-analyze.ipynb  micros-analyze.ipynb
app/: Main.hs
archive/: rust-toolchain
archive/llm-calls/: main.ts
archive/src/: op.rs
archive/zig/: build.zig
archive/zig/src/: analysis-value.zig  call_tree.zig  compile2ir.zig  compile_ir_back.zig  find_file.zig  include_files.zig  llvm_function.zig  llvm_global_var.zig  llvm_instruction.zig  llvm_memory_buffer.zig  llvm_wrap.zig  main.zig  profile_builder.zig  reset_all_files.zig  skip_commits.zig  variable_info.zig
assets/: sw.js
cases/C-U/: tree-multi.ll  tree-normal.ll
challenges-a/: CMakeLists.txt
challenges-a/.cache/clangd/index/: after.c.02959303526BA6F0.idx  before.c.296FE6AD787E5E1B.idx
challenges-a/file-content-changes/variable-rename/: before.c
challenges-a/src/file-content-changes/variable-rename/: after.c  before.c
llm-calls/: analyze.ts  main.ts
llm-calls/rules/: applyOnInitByFunctionForC++.ts  applyOnInitByFunctionForC.ts
notebook/: LLVMIRDIInfo.jl
rules/: applyOnInitByFunction.ts  applyOnInitByFunctionForC++.ts  applyOnInitByFunctionForC.ts
scripts/: install-nix.sh  zig-cxx
src/: AutoApplyVulnerbilities.cpp  analysis-ir.zig  analyze.rs  app.rs  auto_apply_vulnerbilties.zig  call_tree.zig  clang.zig  compile2ir.cpp  compile2ir.zig  compile_commands.zig  compile_ir_back.zig  diff_on_trees.zig  exe_args.zig  git2.zig  include_files.zig  infer.zig  ir-analyzer.zig  lib.rs  llvm.zig  llvm_basic_block.zig  llvm_bitecode.zig  llvm_function.zig  llvm_functions.zig  llvm_global_var.zig  llvm_instruction.zig  llvm_ir.zig  llvm_memory_buffer.zig  llvm_module.zig  llvm_operands.zig  llvm_parse_ir.zig  llvm_wrap.zig  main.rs  main.zig  parsed_command.zig  profile.zig  prompts.zig  pthread_linked.zig  repo.zig  reset_all_files.zig  shared_variables.zig  (+11 more)
tests/: CMakeLists.txt  basic.c  basic.ll  meson.build  privileges.c  reference.c  shared_var.c  thpool.c  thpool.h  types.h
tests/challenges-a/: add_inst_before.c  name_shadow-after.c  name_shadow-before.c  rename-after.c
tests/correct_sync/: cat.c  split.c  tree-multi.c  tree-normal.c  tree.c  trim.c
tests/missed_bound_check/: checked.c  unchecked.c
tests/shared_var/: correct_atomic.c  dead_lock.c  global.c  paramaters.c  parameters.c  protect_by_lock.c  wrong_atomic.c  wrong_atomic.cpp  wrong_atomic_2.c  wrong_atomic_2.cpp
tests/thread_pool/: correct.c  infi_recur.c
zig-src/: analysis-ir.zig  analyzer.zig  auto_apply_vulnerbilties.zig  call_path.zig  compile2ir.cpp  compile2ir.h  compile2ir.zig  compile_commands.zig  diff_on_trees.zig  exe_args.zig  find_file.zig  git2.zig  infer.zig  ir-analyzer.zig  llvm_function.zig  llvm_memory_buffer.zig  llvm_operands.zig  llvm_parse_ir.zig  llvm_wrap.zig  main.zig  mkdir_no_exist.zig  parsed_command.zig  skip_commits.zig  variable_info.zig
